FileReader shouldn't mark itself as inactive before firing events

BUG=626736
R=haraken@chromium.org

Review-Url: https://codereview.chromium.org/2143353003
Cr-Commit-Position: refs/heads/master@{#405118}

Former-commit-id: b4fd7ed776b57dd923cdb8bd43e0c43edc11d3f9